components/dropdowns/basic/src/index.scss
/* sass-lint:disable class-name-format, no-important */
@import '~@schibstedspain/theme-basic/lib/index';

.sui-DropdownBasic {
  @include media-breakpoint-down(xs) {
    position: relative;
  }
  @include media-breakpoint-up(s) {
    display: inline-block;
  }

  &-button {
    @include reset-button;
    @include media-breakpoint-down(xs) {
      background-color: $c-white;
      padding: $p-v-large $p-h;
      width: 100%;
    }
    @include media-breakpoint-up(s) {
      padding: $p-v $p-h;

      .is-expanded & {
        background-color: $bgc-dropdown-button-hover;
      }
    }
    align-items: center;
    cursor: pointer;
    display: flex;
    justify-content: space-between;

    &:hover {
      color: $c-primary;
    }

    &Wrap {
      @include media-breakpoint-up(s) {
        padding: $size-dropdown-arrow-up 0;
        position: relative;

        .is-expanded > &::after {
          @include arrow-up($size-dropdown-arrow-up, $c-dropdown-arrow);
          bottom: 0;
          content: '';
          left: calc(50% - (#{$size-dropdown-arrow-up} / 2));
          position: absolute;
        }
      }
    }

    &Content {
      @include media-breakpoint-down(xs) {
        font-size: $fz-h3;
        font-weight: normal;
      }
      align-items: center;
      display: flex;
    }

    &Icon {
      @include media-breakpoint-up(s) {
        display: none;
      }
      fill: $c-text-base !important;
      height: $size-dropdown-icon;
      width: $size-dropdown-icon;

      [class$='-button']:hover &:first-child {
        fill: $c-primary !important;
      }

      &:not(:last-child) {
        margin-right: $m-h-small;
      }
    }
  }

  &Menu {
    display: none;

    .is-expanded > & {
      @include sui-grid;
      @include media-breakpoint-down(xs) {
        background-color: $c-white;
        width: 100%;
      }
      @include media-breakpoint-up(s) {
        background-color: $bgc-dropdown-menu-hover;
        box-shadow: $bxsh-dropdown-menu;
        position: absolute;
        z-index: 1;
      }
      background-color: $bgc-dropdown-menu;
      border-top: $bdt-dropdown-menu;
      padding-top: $p-v-large;
    }

    &-item {
      @include media-breakpoint-down(xs) {
        @include sui-cell-of(1);
      }
      @include media-breakpoint-up(s) {
        @include sui-cell;
      }
    }

    &-title {
      @include media-breakpoint-up(s) {
        border-bottom: 1px solid $c-gray-light;
      }
      color: $c-gray-light;
      font-weight: $fw-bold;
      margin-bottom: $m-v;
      padding-bottom: $p-v;
      text-transform: uppercase;
    }

    &-list {
      @include reset-list;

      &Item {
        &:not(:first-child) {
          margin-top: $m-v;
        }
      }

      &Link {
        @include reset-link;
        display: block;

        &:hover {
          color: $c-primary;
        }
      }
    }
  }
}

